Add link to Coordinate.html in index.html

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <html>
 <body>
   <a href="animation.html">  סימולטור אנימציה </a>  
+  <a href="Coordinate.html">  משחק קורדינאטות </a>  
 </body>  
 </html>
