Add links for light intensity in Hebrew and Arabic

--- a/index.html
+++ b/index.html
@@ -2,5 +2,7 @@
 <body>
   <a href="animation.html">  סימולטור אנימציה </a>  
   <a href="Coordinate.html">  משחק קורדינאטות </a>  
+  <a href="light_intensity_HB.html">  עוצמת אור עברית </a>  
+  <a href="light_intensity_AR.html">  עוצמת אור ערבית </a>  
 </body>  
 </html>
