Add new links to Hebrew and Arabic lab pages

--- a/index.html
+++ b/index.html
@@ -1,8 +1,10 @@
 <html>
 <body>
-  <a href="animation.html">  סימולטור אנימציה </a>  
-  <a href="Coordinate.html">  משחק קורדינאטות </a>  
-  <a href="light_intensity_HB.html">  עוצמת אור עברית </a>  
-  <a href="light_intensity_AR.html">  עוצמת אור ערבית </a>  
+  <a href="animation.html">  סימולטור אנימציה </a>  </br>
+  <a href="Coordinate.html">  משחק קורדינאטות </a>  </br>
+  <a href="light_intensity_HB.html">  עוצמת אור עברית </a>  </br>
+  <a href="light_intensity_AR.html">  עוצמת אור ערבית </a>  </br>
+  <a href="hebrew_lab.html">  מעבדת היעילות עברית </a>  
+  <a href="arabic_lab.html">  מעבדת היעילות ערבית</a>  
 </body>  
 </html>
