Add line breaks to Hebrew and Arabic lab links

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <a href="Coordinate.html">  משחק קורדינאטות </a>  </br>
   <a href="light_intensity_HB.html">  עוצמת אור עברית </a>  </br>
   <a href="light_intensity_AR.html">  עוצמת אור ערבית </a>  </br>
-  <a href="hebrew_lab.html">  מעבדת היעילות עברית </a>  
-  <a href="arabic_lab.html">  מעבדת היעילות ערבית</a>  
+  <a href="hebrew_lab.html">  מעבדת היעילות עברית </a> </br> 
+  <a href="arabic_lab.html">  מעבדת היעילות ערבית</a>  </br>
 </body>  
 </html>
